# blog-project

./: .gitignore  Cargo.toml  README.md  commands.txt  test.txt
.github/workflows/: ci.yaml
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: .env.example  Cargo.toml  build.rs
blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  logging.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  middleware.rs
blog-server/tests/: integration_test.rs
blog-wasm/: Cargo.toml  index.html
blog-wasm/src/: lib.rs
