[package]
name = "blog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-web-httpauth = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

sqlx = { workspace = true }
dotenvy = { workspace = true }

jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }